<resources>
    <string name="app_name">DeporAPP</string>

    <string name="title_activity_menu">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">test</string>
    <string name="nav_header_subtitle">test@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="descripcion_texview_about_fragment">DeporAPP es una aplicacion que te permitira Realizar encuentros
        deportivos, con personas que comparten la misma pasion por tu deporte. Esta APP se apoya en la tecnologia de la
        geolocalizacion.
    </string>

    <string name="cancha_titulo_label">Titulo</string>
    <string name="cancha_titulo_hint">Titulo</string>
    <string name="cancha_ubicacion_titulo">Ingrese La Ubicacion</string>
    <string name="cancha_ubicacion_label">Ubicacion</string>
    <string name="cancha_foto_label">Foto</string>
    <string name="cancha_deportes_label">deportes practicables</string>
    <string name="cancha_futbol8_label">futbol 8</string>
    <string name="cancha_futsal_label">futsal</string>
    <string name="cancha_basquet_label">basquet</string>
    <string name="cancha_voley_label">Voley</string>
    <string name="nueva_cancha">Nueva Cancha</string>


    <string name="inicio_sesion_fallida">Inicio de Sesion Fallida :( </string>

    <!-- crear Cancha, etiqueta -->

    <string name="accion_crear_cancha">Agregar</string>
    <string name="accion_crear_equipo_label">Agregar</string>
    <string name="crear_cancha_boton_guardar">guardar</string>
    <string name="agregrado_exitoso_cancha">Guardado Exitosamente</string>
    <string name="agregado_fallido_cancha">Problemas En el Guardado</string>
    <string name="nombre_equipo">Nombre</string>
    <string name="descripcion_equipo_hint">Notas/Reglas/Bienvenida</string>
    <string name="accion_crear_equipo">Crear Equipo</string>
    <string name="accion_crear_encuentro">Crear Encuentro</string>
    <string name="accion_tipo_encuentro_privado">SI</string>
    <string name="accion_tipo_encuentro_publico">NO</string>
    <string name="lorem_small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in nisi at turpis.</string>

    <string name="error_firestore"> ERROR producido en la FIRESTORE</string>
    <string name="cancelar_proceso_firestore"> Se cancelo el proceso en FIRESTORE</string>
    <string name="comentario_creado_firestore_exitosamente"> comentario subido correctamente </string>
    <string name="comentario_creado_firestore_error"> comentario tuvo un error </string>
    <string name="comentario_creado_firestore_cancelado"> comentario fue cancelado </string>

    <string name="p_encuentro_creado_firestore_exitosamente"> participante de encuentro subido correctamente </string>
    <string name="p_encuentro_creado_firestore_error"> participante de encuentro tuvo un error </string>
    <string name="p_encuentro_creado_firestore_cancelado"> participante de encuentro fue cancelado </string>

    <string name="p_equipo_creado_firestore_exitosamente"> participante de equipo subido correctamente </string>
    <string name="p_equipo_creado_firestore_error"> participante de equipo tuvo un error </string>
    <string name="p_equipo_creado_firestore_cancelado"> participante de equipo fue cancelado </string>

    <string name="msj_default_cancelado"> la operacion fue cancelada </string>
    <string name="msj_default_error"> la operacion tuvo un error </string>
    <string name="msj_default_exitoso"> la operacion fue ejecutado correctamente </string>
    <string name="msj_crear_cancha_mensaje"> Se ha Enviado dichos datos de la Cancha al Administrador, para su verificacion. </string>


    <string name="deporte_prompt">Selecciona un Deporte</string>
    <string name="descripcion_comentario">Descripcion</string>
    <string name="muestra_nota_adicional_encuentro">El partido Comienza en punto. \nRef: al cel : 79775947</string>

    <string-array name="deporte_arrays">
        <item>Futbol</item>
        <item>Futsal</item>
        <item>Basquet</item>
        <item>Voley</item>
    </string-array>


</resources>
