<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="ui.equipo.CrearEquipoFragment">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/margin_medium"
            android:id="@+id/text_layout_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_equipo"
            android:padding="@dimen/margin_small"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_nombre_equipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text=""
                tools:text="Nombre"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_cancha_encuentro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion_equipo_hint"
            android:padding="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/text_layout_nombre">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_descripcion_equipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:maxLines="3"
                android:text=""
                tools:text=""/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/txt_deportes_practicables_equipos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Deportes Practicables"
            android:textSize="@dimen/margin_medium"
            app:layout_constraintBottom_toTopOf="@+id/sw_futsal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.059"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_cancha_encuentro" />

    <Switch
            android:id="@+id/sw_futsal"
            android:layout_width="97dp"
            android:layout_height="22dp"
            android:layout_marginTop="72dp"
            android:text="Futsal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.745"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_deportes_practicables_equipos" />

    <Switch
            android:id="@+id/sw_basquet"
            android:layout_width="97dp"
            android:layout_height="22dp"
            android:layout_marginTop="120dp"
            android:text="@string/cancha_basquet_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.745"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_deportes_practicables_equipos" />

    <Switch
            android:id="@+id/sw_voley"
            android:layout_width="97dp"
            android:layout_height="22dp"
            android:layout_marginTop="164dp"
            android:text="@string/cancha_voley_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.745"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_deportes_practicables_equipos" />

    <Switch
            android:id="@+id/sw_futbol"
            android:layout_width="97dp"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:text="Futbol"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.745"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_deportes_practicables_equipos" />


    <Button
            android:id="@+id/btn_guardar_equipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:layout_marginBottom="96dp"
            android:foregroundTint="@color/colorPrimary"

            android:text="@string/crear_cancha_boton_guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sw_voley"
            app:layout_constraintVertical_bias="0.304" />


</androidx.constraintlayout.widget.ConstraintLayout>
