<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="ui.encuentro.CrearJuegoFragment">


    <ScrollView android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true" >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scroll_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_nombre_encuentro"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_equipo"
                android:padding="@dimen/margin_small"
                app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nombre_encuentro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    tools:text="Nombre"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_cancha_encuentro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Cancha"
                android:padding="@dimen/margin_small"
                app:layout_constraintTop_toBottomOf="@id/layout_nombre_encuentro">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_cancha_encuentro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLines="1"
                    android:focusableInTouchMode="false"
                    app:layout_constraintTop_toBottomOf="@id/layout_nombre_encuentro"
                    tools:text="Seleccionar Cancha..."/>
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_fecha_encuentro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Fecha"
            android:padding="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/layout_cancha_encuentro">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fecha_encuentro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:focusableInTouchMode="false"
                tools:text="fecha"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_hora_encuentro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Hora"
            android:padding="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/layout_fecha_encuentro">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_hora_encuentro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:focusableInTouchMode="false"
                tools:text="Hora"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_mi_equipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Equipo"
            android:padding="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/layout_hora_encuentro">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mi_equipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:focusableInTouchMode="false"
                tools:text="Seleccionar Equipo..."/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_cupo_encuentro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Cupos"
            android:padding="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/layout_mi_equipo">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_cupo_encuentro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:lines="1"
                android:maxLines="1"
                tools:text="Cupos"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_nota_encuentro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nota Adicional"
            android:padding="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/layout_cupo_encuentro">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nota_encuentro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="4"
                android:minLines="3"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:layout_marginBottom="@dimen/text_size_large"
                />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_spinner_encuentro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Deporte a Practicar"
                    android:padding="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/text_size_large"
                    app:layout_constraintTop_toBottomOf="@id/layout_nota_encuentro">

                <TextView
                        android:id="@+id/tv_label_deporte_practicar_encuentro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:text="Deporte A Practicar:"
                        android:textSize="@dimen/margin_medium" />

                <Spinner
                        android:id="@+id/spinner_deporte_encuentro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="true"
                        android:entries="@array/deporte_arrays"
                        android:prompt="@string/deporte_prompt"
                        android:layout_marginBottom="50dp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_tipo_encuentro"
            android:padding="8dp"
            android:layout_marginBottom="@dimen/text_size_large"
            app:layout_constraintTop_toBottomOf="@+id/layout_spinner_encuentro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Switch
                android:id="@+id/tipo_encuentro"
                android:switchPadding="@dimen/text_size_large"
                android:showText="true"
                android:textOn="@string/accion_tipo_encuentro_privado"
                android:textOff="@string/accion_tipo_encuentro_publico"

                android:text="El Encuentro Sera Privado?"
                android:textSize="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_size_large"/>

    </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/btn_Crear_encuentro"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/text_size_large"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_width="174dp"
                    android:layout_height="47dp"
                    android:layout_marginTop="10dp"
                    android:text="Crear"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_tipo_encuentro"
                    app:layout_constraintVertical_bias="0.333" />

            <Button
                    android:id="@+id/btn_cancelar_encuentro"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/text_size_large"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_width="174dp"
                    android:layout_height="47dp"
                    android:layout_marginTop="10dp"
                    android:text="Cancelar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_tipo_encuentro"
                    app:layout_constraintVertical_bias="0.333" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>
